Model generation for fetch-overlap api
