# src/gen/java/com/saha/rest/model/AvailabilitySlot.java
@@ -1,0 +1,119 @@
+/*
+ * Harbor Calendar Api's
+ * Harbor Calendar 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.saha.rest.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.time.OffsetDateTime;
+import javax.validation.constraints.*;
+import javax.validation.Valid;
+
+/**
+ * Availability Slot definition among all the given users
+ */
+@ApiModel(description = "Availability Slot definition among all the given users")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2023-07-14T03:29:51.749+05:30[Asia/Kolkata]")
+public class AvailabilitySlot   {
+  @JsonProperty("startTime")
+  private OffsetDateTime startTime;
+
+  @JsonProperty("endTime")
+  private OffsetDateTime endTime;
+
+  public AvailabilitySlot startTime(OffsetDateTime startTime) {
+    this.startTime = startTime;
+    return this;
+  }
+
+  /**
+   * The date in the following format :- DD/MM/YYYY HH:MM
+   * @return startTime
+   **/
+  @JsonProperty("startTime")
+  @ApiModelProperty(required = true, value = "The date in the following format :- DD/MM/YYYY HH:MM")
+  @NotNull 
+  public OffsetDateTime getStartTime() {
+    return startTime;
+  }
+
+  public void setStartTime(OffsetDateTime startTime) {
+    this.startTime = startTime;
+  }
+
+  public AvailabilitySlot endTime(OffsetDateTime endTime) {
+    this.endTime = endTime;
+    return this;
+  }
+
+  /**
+   * The date in the following format :- DD/MM/YYYY HH:MM
+   * @return endTime
+   **/
+  @JsonProperty("endTime")
+  @ApiModelProperty(required = true, value = "The date in the following format :- DD/MM/YYYY HH:MM")
+  @NotNull 
+  public OffsetDateTime getEndTime() {
+    return endTime;
+  }
+
+  public void setEndTime(OffsetDateTime endTime) {
+    this.endTime = endTime;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    AvailabilitySlot availabilitySlot = (AvailabilitySlot) o;
+    return Objects.equals(this.startTime, availabilitySlot.startTime) &&
+        Objects.equals(this.endTime, availabilitySlot.endTime);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(startTime, endTime);
+  }
+
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class AvailabilitySlot {\n");
+    
+    sb.append("    startTime: ").append(toIndentedString(startTime)).append("\n");
+    sb.append("    endTime: ").append(toIndentedString(endTime)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
